# cerata

./: .gitignore  CMakeLists.txt  annotated.html  annotated_dup.js  api_8h_source.html  architecture_8cc_source.html  architecture_8h_source.html  array_8cc_source.html  array_8h_source.html  block_8cc_source.html  block_8h_source.html  classcerata_1_1_component-members.html  classcerata_1_1_component.html  classcerata_1_1_component.js  classcerata_1_1_component__inherit__graph.dot  classcerata_1_1_component_pool-members.html  classcerata_1_1_component_pool.html  classcerata_1_1_component_pool__inherit__graph.dot  classcerata_1_1_edge-members.html  classcerata_1_1_edge.html  classcerata_1_1_edge.js  classcerata_1_1_edge__coll__graph.dot  classcerata_1_1_edge__inherit__graph.dot  classcerata_1_1_expression-members.html  classcerata_1_1_expression.html  classcerata_1_1_expression.js  classcerata_1_1_expression__coll__graph.dot  classcerata_1_1_field-members.html  classcerata_1_1_field.html  classcerata_1_1_field.js  classcerata_1_1_field__inherit__graph.dot  classcerata_1_1_graph-members.html  classcerata_1_1_graph.html  classcerata_1_1_graph.js  classcerata_1_1_graph__coll__graph.dot  classcerata_1_1_graph__inherit__graph.dot  classcerata_1_1_instance-members.html  classcerata_1_1_instance.html  classcerata_1_1_instance.js  classcerata_1_1_instance__coll__graph.dot  (+419 more)
.github/workflows/: cpp.yml  documentation.yml
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  (+67 more)
src/cerata/: api.h  array.cc  array.h  domain.h  edge.cc  edge.h  errors.h  expression.cc  expression.h  flattype.cc  flattype.h  graph.cc  graph.h  literal.cc  literal.h  logging.h  node.cc  node.h  object.cc  object.h  output.h  parameter.cc  parameter.h  pool.cc  pool.h  port.cc  port.h  signal.cc  signal.h  status.h  stream.cc  stream.h  transform.cc  transform.h  type.cc  type.h  utils.cc  utils.h
src/cerata/dot/: api.cc  api.h  dot.cc  style.cc  style.h
src/cerata/vhdl/: api.cc  api.h  architecture.cc  architecture.h  block.h  declaration.cc  declaration.h  design.cc  design.h  identifier.cc  identifier.h  instantiation.cc  instantiation.h  resolve.cc  resolve.h  template.cc  template.h  vhdl.h  vhdl_types.cc  vhdl_types.h
src/cerata/yaml/: api.cc  api.h  yaml.cc  yaml.h
test/cerata/: test_designs.h  test_graphs.cc  test_utils.h
test/cerata/dot/: test_dot.cc
test/cerata/vhdl/: test_assignments.cc  test_declarators.cc  test_designs.cc  test_instantiators.cc  test_output.cc
test/cerata/yaml/: test_yaml.cc
